--- a/project.json
+++ b/project.json
@@ -15,7 +15,15 @@
         "polyfills": ["zone.js"],
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["./src/favicon.ico", "./src/assets"],
+        "assets": [
+          "./src/favicon.ico",
+          "./src/assets",
+          {
+            "glob": "**/*",
+            "input": "src/assets/styles",
+            "output": "styles"
+          }
+        ],
         "styles": ["./src/styles.scss"],
         "scripts": []
       },
